[tool.poetry]
name = "cloud_storage"
version = "14.7.2"
description = "Frappe App for integrating with cloud storage applications"
authors = ["AgriTheory <support@agritheory.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.41"
botocore = "^1.29.41"
python-magic = "^0.4.27"
moto = {version = "^4.1.6", extras = ["s3"]}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
skip = "CHANGELOG.md"

[tool.pytest.ini_options]
addopts = "--cov=cloud_storage --cov-report term-missing"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.semantic_release.branches.version]
match = "version-15"
